# mandelbrot

./: .gitignore  Cargo.toml  README.md  config.ron
src/: color.rs  config.rs  julia.rs  main.rs  mandelbrot.rs  mode.rs
