[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Niko Lepka <slench102+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "^0.16.2"
ron = "^0.5.1"
serde = "^1.0.105"
serde_derive = "^1.0.105"

[dependencies.num-complex]
version = "^0.2.4"
features = ["serde"]